--- a/capstone/src/components/Login/Login.module.css
+++ b/capstone/src/components/Login/Login.module.css
@@ -135,3 +135,16 @@
     margin-right: 8px;
   }
   
+  .facebook-button {
+    background-color: #4267b2;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  .facebook-button:hover {
+    background-color: #365899;
+  }
+  
