--- a/capstone/src/components/AccountSetting/Profile.module.css
+++ b/capstone/src/components/AccountSetting/Profile.module.css
@@ -43,9 +43,11 @@ body {
     height: 100px;
     border-radius: 50%;
     margin-right: 20px;
+    border: 3px solid #5e5e5e86;
 }
 .profileHeader h2 {
     margin: 0;
+
 }
 .profileInfo {
     margin-top: 20px;
@@ -78,3 +80,47 @@ body {
     background: none;
     width: auto;
 }
+.info_title_tag {
+    color: var(--gray-400, #959FA3);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    text-transform: uppercase;
+}
+.info_title_icon {
+    font-size: 22px;
+    color: var(--color-red-body);
+    margin: 3px 14px 14px 14px;
+}
+
+.info_title_item {
+    color: var(--gray-900, #191B1C);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+.infoBox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+.changeAvatar  button {
+    position: relative;
+    right: 50px;
+    bottom: 4px;
+    font-size: 16px;
+    border-radius:50%;
+    border: none;
+    background-color: #b6b6b6;
+    cursor: pointer;
+    z-index: 10;
+    padding: 6px;
+}
+
