--- a/capstone/src/components/AccountSetting/RegisteredCourses.module.css
+++ b/capstone/src/components/AccountSetting/RegisteredCourses.module.css
@@ -10,205 +10,70 @@ body {
     background-color: #f9f9f9;
     color: #333;
 }
-
-
-.logoImg {
-    width: 4rem;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #d4b1b2;
-    padding: 10px 20px;
-}
-
-.searchBar {
-    position: relative;
-    width: 400px;
-}
-
-.searchBar input {
-    width: 100%;
-    padding: 10px 40px 10px 10px;
-    border-radius: 25px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-}
-
-.searchBar .searchIcon {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;    
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-}
-.icons a {
-  margin-left: 20px;
-  font-size: 20px;
-  color: #666;
-  text-decoration: none;
-}
-
-.sidebar {
-    width: 200px;
-    background-color: #f8f8f8;
-    padding: 20px;
-    position: absolute;
-}
-.sidebar a {
-    display: block;
-    padding: 10px 0;
-    color: #000;
-    text-decoration: none;
-    font-size: 16px;
-}
-.sidebar a i {
-    margin-right: 10px;
-}
-.sidebar a:focus, .sidebar a:hover {
-    text-decoration: underline;
-}
-
 .content {
-    margin-left: 220px;
+  margin-left: 220px;
+  padding: 20px;
+}
+
+.content2 {
+    flex-grow: 1;
     padding: 20px;
-}
-.content h2 {
-    font-weight: 500;
-}
-.courseCard {
+    background-color: #fff;
+    height: auto;
+  }
+  
+  .courseCard {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .courseImage {
+    width: 250px;
+    height: 120px;
+    background: linear-gradient(45deg, #63cbe8, #0072ff);
     display: flex;
     align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.courseCard img {
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    margin-right: 20px;
-}
-.courseCard .courseInfo {
-    flex: 1;
-}
-.courseCard .courseInfo h3 {
-    margin: 0;
-    font-weight: 500;
-    color: black;
-    text-decoration: none;
-}
-.courseCard .courseInfo p {
-    margin: 5px 0 0;
-    color: palevioletred;
-}
-.courseCard .courseInfo a {
-    text-decoration: none;
-}
-.courseCard a {
-    text-decoration: none;
-}
-
-footer {
-    background-color: #4d4d4d;
+    justify-content: center;
     color: white;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-}
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10%;
+  }
+  
+  .courseCSS .courseImage{
+    background: linear-gradient(45deg, #599de0, #ec0bf0);
+  }
 
-.footerContent {
+  .courseJavaScript .courseImage{
+    background: linear-gradient(45deg, #d7bd9f, #ffaa00);
+
+  }
+  .courseInfo {
+    padding-top: 30px;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 20px 0;
-    width: 1450px;
-    margin: 0 auto;
-    gap: 20px;
-}
+    flex-direction: column;
+    gap: 5px;
+    font-weight: bold;
+  }
 
-.footerLinks {
-    flex: 1;
-}
-
-.footerLinks a {
-    display: block;
-    margin-bottom: 8px;
-    color: white;
-    text-decoration: none;
-    font-size: 16px;
-    transition: color 0.3s;
-}
-
-.footerLinks a:hover {
-    color: #ddd;
-}
-
-.footerAbout {
-    flex: 2;
-    max-width: 300px;
-}
-
-.footerAbout p {
-    margin: 5px 0;
-    font-size: 14px;
-}
-
-.footerAbout .email {
-    color: #e57373;
-    text-decoration: none;
-}
-
-.footerAbout .email:hover {
-    text-decoration: underline;
-}
-
-.footerFollow {
-    flex: 1;
-    text-align: center;
-}
-
-.footerFollow p {
-    margin-bottom: 10px;
-}
-
-.footerFollow a {
-    display: inline-block;
-    margin-right: 10px;
-    font-size: 24px;
-    color: #ccc;
-    transition: color 0.3s, transform 0.3s;
-}
-
-.footerFollow a:hover {
-    color: #ffffff;
-    transform: scale(1.2);
-}
-
-.footerFollow a:last-child {
-    margin-right: 0;
-}
-
-footer p {
-    font-size: 14px;
-    color: #888;
-}
-
-.copyright {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    color: #888;
-    border-top: 1px solid #555;
-    padding-top: 15px;
-}
+  .courseCard {
+    transition: transform 0.2s ease;
+  }
+  
+  .courseCard:hover {
+    cursor: pointer; 
+    transform: scale(1.02); 
+  }
+  
+  
+  .progressBar {
+    width: 100%;
+    height: 5px;
+    background-color: #e0e0e0;
+  }
+  
+  .progress {
+    height: 100%;
+    background-color: #6a4db8;
+  }
