--- a/capstone/src/components/Header/Header.module.css
+++ b/capstone/src/components/Header/Header.module.css
@@ -103,3 +103,17 @@ nav li:hover a{
     color: #666;
     text-decoration: none;
 }
+.navbarLogout {
+    display: inline-block;
+    padding: 10px 10px;
+    background-color: #ff4d4d;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
+}
+
+.navbarLogout:hover {
+    background-color: #ff1a1a;
+}
