--- a/capstone/src/components/Register/Register.module.css
+++ b/capstone/src/components/Register/Register.module.css
@@ -17,7 +17,7 @@
     display: flex;
     max-width: 1000px;
     width: 100%;
-    height: 550px;
+    height: 570px;
     background-image: url('../../images/background.png');
     background-size: 1000px 570px;
     background-repeat: no-repeat;
@@ -29,15 +29,15 @@
   }
   
   .signupBox {
-    padding: 40px;
+    padding: 0px 40px;
     width: 50%;
+    margin-top: 10px;
   }
   
   h2 {
     margin-bottom: 20px;
     font-size: 2rem;
     color: #333;
-    text-align: center;
   }
   
   .inputField {
