--- a/capstone/src/pages/Admin/AdminSidebar.module.css
+++ b/capstone/src/pages/Admin/AdminSidebar.module.css
@@ -1,12 +1,8 @@
-* {
+body {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #f5f6fa;
 }
 .sidebar {
     width: 250px;
