--- a/capstone/src/components/CourseDescription/CourseDescription.module.css
+++ b/capstone/src/components/CourseDescription/CourseDescription.module.css
@@ -59,6 +59,11 @@ h3{
     border-radius: 5px;
   }
 
+  .sidebar ul li a {
+    text-decoration: none;
+    color: black;
+  }
+
   .sidebar ul li:hover {
     background-color: #c0c0c0;
 }
