--- a/capstone/src/pages/Admin/ManageUserAccount.module.css
+++ b/capstone/src/pages/Admin/ManageUserAccount.module.css
@@ -179,6 +179,17 @@ table td.actions i.delete {
     background-color: #f5f6fa;
     border-top: 1px solid #ddd;
 }
+.pagination button{
+    background-color:rgb(99, 74, 158);
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.pagination button:hover {
+    background-color: rgb(45, 26, 90);
+}
 .pagination .info {
     font-size: 14px;
     color: #888;
